--- a/resources_cn/messages/ActionsBundle.properties
+++ b/resources_cn/messages/ActionsBundle.properties
@@ -1236,7 +1236,7 @@ action.Vcs.RefreshStatuses.text=\u5237\u65b0\u6587\u4ef6\u72b6\u6001(_E)
 action.Vcs.RefreshStatuses.description=\u5237\u65b0\u9879\u76ee\u4e2d\u6240\u6709\u6587\u4ef6\u7684VCS\u72b6\u6001
 
 action.ShowNavBar.text=\u8df3\u8f6c\u5230\u5bfc\u822a\u680f(_J)
-action.ShowNavBar.ShortText=Navigation Bar
+action.ShowNavBar.ShortText=\u5bfc\u822a\u680f
 
 action.ScopeView.EditScopes.text=\u7f16\u8f91\u8303\u56f4(_I)...
 action.ScopeView.EditScopes.description=\u7f16\u8f91\u8303\u56f4...
