--- a/resources_cn/messages/DebuggerBundle.properties
+++ b/resources_cn/messages/DebuggerBundle.properties
@@ -48,7 +48,7 @@ progress.set.value=Setting value...
 action.add.field.watchpoint.text=Add Field Watchpoint
 status.process.started=Process started
 status.process.terminated=Process terminated
-status.disconnected=Disconnected from the target VM, address: {0}
+status.disconnected=Disconnected from the target VM, address: ''{0}'', transport: ''{1}''
 status.stopped.at.cursor=Stopped at cursor
 status.line.breakpoint.reached=Breakpoint reached at {0}({1}:{2,number,#})
 status.line.breakpoint.reached.full.trace=Breakpoint reached
@@ -67,8 +67,8 @@ status.field.watchpoint.reached.access='{'{0}@{5}'}'.{1} will be accessed at {2}
 status.static.field.watchpoint.reached.access={0}.{1} will be accessed at {2}({3}:{4,number,#})
 status.field.watchpoint.reached.modification='{'{0}@{7}'}'.{1} will be modified at {4}({5}:{6,number,#}). Current value = ''{2}''. New value = ''{3}''
 status.static.field.watchpoint.reached.modification={0}.{1} will be modified at {4}({5}:{6,number,#}). Current value = ''{2}''. New value = ''{3}''
-status.connected=Connected to the target VM, address: {0}
-status.connect.failed=Failed to establish connection to the target VM, address: {0}
+status.connected=Connected to the target VM, address: ''{0}'', transport: ''{1}''
+status.connect.failed=Failed to establish connection to the target VM, address: ''{0}'', transport: ''{1}''
 error.debugger.already.listening=Debugger is already listening
 transport.name.shared.memory=shared memory
 transport.name.socket=socket
@@ -87,9 +87,9 @@ error.vm.disconnected=VM disconnected. Target virtual machine closed connection
 error.unknown.host=Cannot connect to remote process, host is unknown
 error.cannot.open.debugger.port=Unable to open debugger port
 error.exception.while.connecting=Error connecting to remote process.\nException occurred: {0}\nException message: {1}
-status.waiting.attach=Debugger is waiting for application to start; debug address: {0}
-status.listening=Listening to the connection, address: {0}
-status.connecting=Connecting to the target VM, address: {0}
+status.waiting.attach=Debugger is waiting for application to start; debug address: ''{0}''; transport: ''{1}''
+status.listening=Listening to the connection, address: ''{0}'', transport: ''{1}''
+status.connecting=Connecting to the target VM, address: ''{0}'', transport: ''{1}''
 status.app.running=The application is running
 status.debug.stopped=Debug stopped
 status.waiting.evaluation.result=Waiting until last debugger command completes
@@ -114,8 +114,8 @@ evaluation.error.lebeled.loops.not.found=No loop statements labeled with label '
 evaluation.error.reference.type.expected=Reference type expected
 evaluation.error.variable.not.declared=Variable ''{0}'' is not declared
 evaluation.error.variable.already.declared=Variable ''{0}'' is already declared
-evaluation.error.operation.not.supported=Operation ''{0}'' is not supported
-evaluation.error.statement.not.supported=Statement ''{0}'' is not supported
+evaluation.error.operation.not.supported=Operation ''{0}'' not supported
+evaluation.error.statement.not.supported=Statement ''{0}'' not supported
 evaluation.error.incompatible.variable.initializer.type=Initializer for ''{0}'' has incompatible type
 evaluation.error.local.variable.missing.from.class.closure=Local variable ''{0}'' not found in class closure
 evaluation.error.local.variable.missing=Cannot find local variable ''{0}''
