--- a/resources_cn/messages/ApplicationBundle.properties
+++ b/resources_cn/messages/ApplicationBundle.properties
@@ -1,14 +1,15 @@
-title.settings.import.failed=Settings Import Failed
-error.unable.to.import.settings=Unable to import settings. {0}
-title.installation.home.required=Config Folder or Installation Home Required
-error.please.select.previous.installation.home=Please select previous {0} config folder or installation home
-error.selected.current.installation.home=You have selected current {0} config folder or installation home
-error.does.not.appear.to.be.installation.home={0} does not appear to be {1} config folder or installation home
-error.no.read.permissions=You do not have read permissions to {0}
-radio.do.not.import=Do not import settings
-radio.import.auto=Previous version ({0})
-radio.import=Config or installation folder:
-title.import.settings=Import {0} Settings From...
+title.settings.import.failed=\u5bfc\u5165\u8bbe\u7f6e\u5931\u8d25
+error.unable.to.import.settings=\u65e0\u6cd5\u5bfc\u5165\u8bbe\u7f6e. {0}
+title.complete.installation=\u5b8c\u6210\u5b89\u88c5
+title.installation.home.required=\u9700\u8981\u914d\u7f6e\u6587\u4ef6\u5939\u6216\u5b89\u88c5\u76ee\u5f55
+error.please.select.previous.installation.home=\u8bf7\u9009\u62e9\u4e4b\u524d\u7248\u672c\u7684 {0} \u914d\u7f6e\u6587\u4ef6\u5939\u6216\u5b89\u88c5\u76ee\u5f55
+error.selected.current.installation.home=\u60a8\u5df2\u9009\u62e9\u5f53\u524d\u7684 {0} \u914d\u7f6e\u6587\u4ef6\u5939\u6216\u5b89\u88c5\u76ee\u5f55
+error.does.not.appear.to.be.installation.home={0} \u4f3c\u4e4e\u4e0d\u662f {1} \u7684\u914d\u7f6e\u6587\u4ef6\u5939\u6216\u5b89\u88c5\u76ee\u5f55
+error.no.read.permissions=\u60a8\u6ca1\u6709\u8bfb\u53d6 {0} \u7684\u6743\u9650
+radio.do.not.import=\u4e0d\u8981\u5bfc\u5165\u8bbe\u7f6e
+radio.import.auto=\u4ee5\u524d\u7684\u7248\u672c ({0})
+radio.import=\u81ea\u5b9a\u4e49\u4f4d\u7f6e\uff1a\u9009\u62e9\u914d\u7f6e\u6587\u4ef6\u5939\u6216\u4ee5\u524d\u7248\u672c\u7684\u5b89\u88c5\u76ee\u5f55:
+title.import.settings=\u5bfc\u5165 {0} \u8bbe\u7f6e...
 button.ok=\u786e\u5b9a
 title.code.completion=\u4ee3\u7801\u8865\u5168
 editbox.lookup.height=Lookup height (\u9879):
@@ -754,15 +755,14 @@ import.scheme.chooser.destination=\u5230\:
 checkbox.reformat.on.typing.rbrace=\u5728\u952e\u5165'}'\u65f6\u91cd\u65b0\u683c\u5f0f\u5316
 settings.code.style.import.xml.error.invalid.file=\u8be5\u6587\u4ef6\u4f3c\u4e4e\u4e0d\u662f\u4e00\u4e2a\u6709\u6548\u7684 Intellij IDEA XML \u65b9\u6848, \u5b83\u5e94\u8be5\u5305\u542b''code_scheme root''\u5143\u7d20, \u5374\u627e\u5230\u4e86''{0}''.
 settings.code.style.import.xml.error.missing.scheme.name=\u65b9\u6848\u7684'name'\u5c5e\u6027\u672a\u627e\u5230.
-settings.code.style.import.xml.error.can.not.load=Can''t load code style scheme {0}.
+settings.code.style.import.xml.error.can.not.load=\u65e0\u6cd5\u52a0\u8f7d\u4ee3\u7801\u98ce\u683c\u65b9\u6848{0}.
 
-group.richcopy=Rich-text copy
+group.richcopy=\u5bcc\u6587\u672c\u590d\u5236
 combobox.richcopy.color.scheme=\u914d\u8272\u65b9\u6848
 combobox.richcopy.color.scheme.active=\u6d3b\u52a8\u65b9\u6848
 
 settings.code.style.default.general=\u9ed8\u8ba4
 wrapping.wrap.if.multiple.annotations=\u5982\u679c\u6709\u591a\u4e2a\u5c31\u6253\u5305
-combobox.enable.richcopy.by.default=\u9ed8\u8ba4\u590d\u5236\u4e3a\u5bcc\u6587\u672c
 wrapping.after.annotations=\u6700\u540e\u4e00\u4e2a\u6ce8\u89e3\u4e4b\u540e
 
 reformat.changed.text.file.too.big.notification.groupId=\u91cd\u65b0\u683c\u5f0f\u5316\u5df2\u6539\u53d8\u7684\u6587\u672c
@@ -771,7 +771,8 @@ reformat.changed.text.file.too.big.notification.text=\u6587\u4ef6 {0} \u8fc7\u59
 bulk.reformat.prepare.progress.text=\u6b63\u5728\u51c6\u5907...
 bulk.reformat.process.progress.text=\u6b63\u5728\u5904\u7406...
 
-code.style.different.indent.size.detected=This file is indented with {0} instead of {1} configured for the project
+combobox.enable.richcopy.by.default=\u9ed8\u8ba4\u590d\u5236\u4e3a\u5bcc\u6587\u672c
+code.style.different.indent.size.detected=\u8fd9\u4e2a\u6587\u4ef6\u662f\u7528 {0} \u7a7a\u683c\u7f29\u8fdb, \u800c\u4e0d\u662f {1}
 
 code.style.indent.detector.reject=Indent New Lines with {0}
 code.style.indent.detector.disable=Disable Indents Detection for Project
