--- a/resources_cn/messages/DaemonBundle.properties
+++ b/resources_cn/messages/DaemonBundle.properties
@@ -1,52 +1,52 @@
-method.is.implemented.too.many=Has implementations
-method.is.overridden.too.many=Is overridden in subclasses
-interface.is.implemented.too.many=Has implementations
-class.is.subclassed.too.many=Has subclasses
+method.is.implemented.too.many=\u6709\u5b9e\u73b0
+method.is.overridden.too.many=\u5728\u5b50\u7c7b\u4e2d\u88ab\u8986\u76d6
+interface.is.implemented.too.many=\u6709\u5b9e\u73b0
+class.is.subclassed.too.many=\u6709\u5b50\u7c7b
 
-method.implements=Implements method in <a href="#javaClass/{1}">{1}</a>
-method.implements.in=Implements method ''{0}'' in <a href="#javaClass/{1}">{1}</a>
+method.implements=\u5b9e\u73b0<a href="#javaClass/{1}">{1}</a>\u4e2d\u7684\u65b9\u6cd5
+method.implements.in=\u5b9e\u73b0<a href="#javaClass/{1}">{1}</a>\u4e2d\u7684\u65b9\u6cd5''{0}''
 
-method.overrides=Overrides method in <a href="#javaClass/{1}">{1}</a>
-method.overrides.in=Overrides method ''{0}'' in <a href="#javaClass/{1}">{1}</a>
+method.overrides=\u91cd\u5199<a href="#javaClass/{1}">{1}</a>\u4e2d\u7684\u65b9\u6cd5
+method.overrides.in=\u91cd\u5199 <a href="#javaClass/{1}">{1}</a>\u4e2d\u7684\u65b9\u6cd5''{0}''
 
-analysis.hasnot.been.run=No analysis has been performed
+analysis.hasnot.been.run=\u6ca1\u6709\u5df2\u8fdb\u884c\u5206\u6790
 
-no.syntax.highlighting.performed=No syntax highlighting performed
-no.inspections.performed=No inspections performed
+no.syntax.highlighting.performed=\u6ca1\u6709\u6267\u884c\u8bed\u6cd5\u9ad8\u4eae\u663e\u793a
+no.inspections.performed=\u6ca1\u6709\u8fdb\u884c\u68c0\u67e5
 
 # These two aren't unused!
 # suppress inspection "UnusedProperty"
-no.syntax.highlighting.performed.for=No syntax highlighting performed for {0}
+no.syntax.highlighting.performed.for=\u6ca1\u6709\u4e3a{0}\u6267\u884c\u8bed\u6cd5\u9ad8\u4eae
 # suppress inspection "UnusedProperty"
-no.inspections.performed.for=No inspections performed {0}
+no.inspections.performed.for=\u6ca1\u6709\u8fdb\u884c\u68c0\u67e5 {0}
 
-pass.syntax=Syntax analysis
-pass.inspection=Inspections
-pass.wolf=Checking red files
-pass.whole.inspections=Slow Inspections
-analysis.completed=Analysis completed
+pass.syntax=\u8bed\u6cd5\u5206\u6790
+pass.inspection=\u68c0\u67e5
+pass.wolf=\u68c0\u67e5\u62a5\u7ea2\u6587\u4ef6
+pass.whole.inspections=\u6162\u901f\u68c0\u67e5
+analysis.completed=\u5206\u6790\u5b8c\u6210
 
-no.errors.or.warnings.found=No problems found
-no.errors.or.warnings.found.so.far=No problems found so far
-errors.found.so.far=<b>{0}</b> {1} found so far
-errors.found=<b>{0}</b> {1} found
+no.errors.or.warnings.found=\u6ca1\u6709\u53d1\u73b0\u95ee\u9898
+no.errors.or.warnings.found.so.far=\u76ee\u524d\u6ca1\u6709\u53d1\u73b0\u95ee\u9898
+errors.found.so.far=\u76ee\u524d\u5df2\u53d1\u73b0<b>{0}</b> {1}
+errors.found=\u5df2\u53d1\u73b0<b>{0}</b> {1}
 
-method.is.implemented.header=Is implemented in <br>
-method.is.overriden.header=Is overridden in <br>
-interface.is.implemented.by.header=Is implemented by<br>
-class.is.subclassed.by.header=Is subclassed by<br>
+method.is.implemented.header=\u5df2\u5b9e\u73b0\u4e8e<br>
+method.is.overriden.header=\u5df2\u8986\u76d6\u4e8e<br>
+interface.is.implemented.by.header=\u5df2\u5b9e\u73b0\u4e8e<br>
+class.is.subclassed.by.header=\u5df2\u5212\u5206\u4e3a\u5b50\u7c7b\u4e8e<br>
 
-navigation.title.super.method=Choose Super Method of {0}
-navigation.findUsages.title.super.method=Super Methods of {0}
-navigation.title.implementation.method=<html><body>Choose Implementation of <b>{0}</b> ({1} methods found)</body></html>
-navigation.title.overrider.method=<html><body>Choose Overriding Method of <b>{0}</b> ({1} methods found)</body></html>
-navigation.title.subclass=<html><body>Choose Subclass of <b>{0}</b> ({1} classes found{2})</body></html>
-performing.code.analysis=Performing code analysis
-inspection.extended.description=more...
-inspection.collapse.description=less...
+navigation.title.super.method=\u9009\u62e9{0}\u7684\u7236\u7c7b\u65b9\u6cd5
+navigation.findUsages.title.super.method={0}\u7684\u7236\u7c7b\u65b9\u6cd5
+navigation.title.implementation.method=<html><body>\u9009\u62e9<b>{0}</b>\u7684\u5b9e\u73b0 (\u5df2\u627e\u5230{1}\u4e2a\u65b9\u6cd5)</body></html>
+navigation.title.overrider.method=<html><body>\u9009\u62e9<b>{0}</b>\u7684\u91cd\u5199\u65b9\u6cd5 (\u5df2\u627e\u5230{1}\u4e2a\u65b9\u6cd5)</body></html>
+navigation.title.subclass=<html><body>\u9009\u62e9<b>{0}</b>\u7684\u5b50\u7c7b (\u5df2\u627e\u5230{1}\u4e2a\u7c7b{2})</body></html>
+performing.code.analysis=\u6b63\u5728\u6267\u884c\u4ee3\u7801\u5206\u6790
+inspection.extended.description=\u66f4\u591a...
+inspection.collapse.description=\u66f4\u5c11...
 
 import.popup.text={0}?
-import.popup.multiple={0}? (multiple choices...)
+import.popup.multiple={0}? (\u591a\u79cd\u9009\u62e9...)
 
-service.provides=Provides service <a href="#javaClass/{0}">{0}</a><br><div style='margin-top: 5px'><font size='2'>Click to navigate</font></div>
-service.uses=Uses service <a href="#javaClass/{0}">{0}</a><br><div style='margin-top: 5px'><font size='2'>Click to navigate</font></div>
+service.provides=\u63d0\u4f9bservice <a href="#javaClass/{0}">{0}</a><br><div style='margin-top: 5px'><font size='2'>\u70b9\u51fb\u6d4f\u89c8</font></div>
+service.uses=\u4f7f\u7528service <a href="#javaClass/{0}">{0}</a><br><div style='margin-top: 5px'><font size='2'>\u70b9\u51fb\u6d4f\u89c8</font></div>
