--- a/resources_cn/messages/DiagnosticBundle.properties
+++ b/resources_cn/messages/DiagnosticBundle.properties
@@ -18,7 +18,7 @@ error.list.title=IDE Fatal Errors
 error.list.message.index.count={0} of {1}
 error.list.message.blame.core=Exception in <b>{0} core</b>.
 error.list.message.blame.plugin=Exception in plugin <b>{0}</b>.
-error.list.message.blame.plugin.version=Exception in plugin <b>{0}</b> ({1}).
+error.list.message.blame.plugin.version=\u63d2\u4ef6 <b>{0}</b> ({1}).
 error.list.message.blame.unknown.plugin=Exception in <b>unknown plugin</b>.
 error.list.message.info={0}. Occurred {1,choice,1#once|2#{1} times} since the last clear.
 error.list.disable.plugin=&Disable plugin...
@@ -57,7 +57,7 @@ error.dialog.notice.named=<html>I agree to my names, email address, username, pa
 
 title.submitting.error.report=Submitting Error Report
 error.report.gratitude=Thank you for your feedback!
-error.report.posting.failed=Report sending failed: {0}. Do you want to try again?
+error.report.posting.failed=Report posting failed: {0}. Do you want to try again?
 error.report.new.eap.build.message=New build {0} is available.
 error.itn.returns.wrong.data=ITN returns wrong data
 error.http.result.code=HTTP Result code: {0}
