--- a/resources_cn/messages/EditorBundle.properties
+++ b/resources_cn/messages/EditorBundle.properties
@@ -1,36 +1,36 @@
-attempt.to.modify.read.only.document.error.message=Attempt to modify read-only document
-editing.read.only.file.hint=File is read-only
-typing.in.editor.command.name=Typing
-errors.panel.go.to.errors.first.radio=Go to high priority problems only
-errors.panel.go.to.next.error.warning.radio=Go to next problem
-customize.highlighting.level.menu.item=Customize Highlighting Level
-move.caret.command.name=Move caret
+attempt.to.modify.read.only.document.error.message=\u5c1d\u8bd5\u4fee\u6539\u53ea\u8bfb\u6587\u6863
+editing.read.only.file.hint=\u6587\u4ef6\u4e3a\u53ea\u8bfb\u6587\u4ef6
+typing.in.editor.command.name=\u952e\u5165
+errors.panel.go.to.errors.first.radio=\u53ea\u8f6c\u5230\u9ad8\u4f18\u5148\u7ea7\u95ee\u9898
+errors.panel.go.to.next.error.warning.radio=\u8f6c\u5230\u4e0b\u4e00\u4e2a\u95ee\u9898
+customize.highlighting.level.menu.item=\u81ea\u5b9a\u4e49\u9ad8\u4eae\u7b49\u7ea7
+move.caret.command.name=\u79fb\u52a8\u5149\u6807
 
-guarded.block.modification.attempt.error.message=Unable to perform an action since it changes read-only fragments of the current document
-guarded.block.modification.attempt.error.title=Guarded Block Modification Attempt
-close.editor.annotations.action.name=Close Annotations
-editor.annotations.action.group.name=Annotations
-move.cursor.command.name=Move Cursor
-paste.command.name=Paste
-move.selection.command.name=Move selection
-typing.command.name=Typing
-hector.import.popup.checkbox=Import &popup
-hector.highlighting.level.title=Highlighting Level
-hector.none.slider.label=None
-hector.syntax.slider.label=Syntax
-hector.inspections.slider.label=Inspections
-action.duplicate.selection=&Duplicate Selection
-action.duplicate.line=&Duplicate Line
-increase.editor.font=Increase Font Size
-decrease.editor.font=Decrease Font Size
-forced.soft.wrap.message=This document contains very long lines. Soft wraps were forcibly enabled to improve editor performance.
-forced.soft.wrap.hide.message=Hide notification
-forced.soft.wrap.dont.show.again.message=Don't show again
-editor.notification.default.action.name=Notification actions
-editor.notification.settings.option.name=Settings...
+guarded.block.modification.attempt.error.message=\u65e0\u6cd5\u6267\u884c\u64cd\u4f5c\uff0c\u56e0\u4e3a\u5b83\u4fee\u6539\u4e86\u5f53\u524d\u6587\u6863\u7684\u53ea\u8bfb\u7247\u6bb5
+guarded.block.modification.attempt.error.title=\u5c1d\u8bd5\u4fee\u6539\u4fdd\u62a4\u5757
+close.editor.annotations.action.name=\u5173\u95ed\u6ce8\u91ca
+editor.annotations.action.group.name=\u6ce8\u91ca
+move.cursor.command.name=\u79fb\u52a8\u5149\u6807
+paste.command.name=\u7c98\u8d34
+move.selection.command.name=\u79fb\u52a8\u6240\u9009
+typing.command.name=\u952e\u5165
+hector.import.popup.checkbox=\u5bfc\u5165\u5f39\u7a97(&P)
+hector.highlighting.level.title=\u9ad8\u4eae\u7b49\u7ea7
+hector.none.slider.label=\u65e0
+hector.syntax.slider.label=\u8bed\u6cd5
+hector.inspections.slider.label=\u68c0\u67e5
+action.duplicate.selection=\u590d\u5236\u5df2\u9009(&D)
+action.duplicate.line=\u590d\u5236\u884c(&D)
+increase.editor.font=\u589e\u52a0\u5b57\u4f53\u5927\u5c0f
+decrease.editor.font=\u51cf\u5c11\u5b57\u4f53\u5927\u5c0f
+forced.soft.wrap.message=\u672c\u6587\u6863\u5305\u542b\u5f88\u957f\u7684\u884c\u3002\u81ea\u52a8\u6362\u884c\u88ab\u5f3a\u884c\u542f\u7528\u4ee5\u63d0\u9ad8\u7f16\u8f91\u5668\u6027\u80fd.
+forced.soft.wrap.hide.message=\u9690\u85cf\u901a\u77e5
+forced.soft.wrap.dont.show.again.message=\u4e0d\u518d\u663e\u793a
+editor.notification.default.action.name=\u901a\u77e5\u884c\u4e3a
+editor.notification.settings.option.name=\u6b63\u5728\u8bbe\u7f6e...
 
-editor.open.file.progress=Opening {0}
-editing.viewer.hint=This view is read-only
+editor.open.file.progress=\u6b63\u5728\u6253\u5f00 {0}
+editing.viewer.hint=\u6b64\u89c6\u56fe\u4e3a\u53ea\u8bfb
 
-content.to.paste.too.large.title=Cannot Paste
-content.to.paste.too.large.message=Content is too large ({0}), limit is {1}
+content.to.paste.too.large.title=\u4e0d\u53ef\u4ee5\u7c98\u8d34
+content.to.paste.too.large.message=\u5185\u5bb9\u592a\u5927 ({0}), \u9650\u5236\u4e3a {1}
