--- a/resources_cn/messages/FileTypesBundle.properties
+++ b/resources_cn/messages/FileTypesBundle.properties
@@ -1,19 +1,19 @@
-filetype.plaintext.description=Text
-filetype.chooser.title=Register New File Type Association
-filetype.chooser.prompt=The file ''{0}'' is not associated with any file type. Please define the association:
-filetype.chooser.association=Open matching files in {0}:
-filetype.registered.patterns.group=Registered Patterns
-filetype.settings.title=File Types
-filetype.edit.existing.title=Edit File Type
-filetype.edit.new.title=New File Type
-filetype.edit.add.pattern.prompt=Enter new &wildcard ('*' and '?' allowed):
-filetype.edit.add.pattern.title=Add Wildcard
-filetype.edit.edit.pattern.title=Edit Wildcard
-filetype.edit.add.pattern.exists.error=This wildcard is reserved for ''{0}'' filetype and cannot be reassigned
-filetype.edit.add.pattern.exists.message=This wildcard is already registered by ''{0}'' filetype
-filetype.edit.add.pattern.reassign.button=&Reassign wildcard
-filetype.edit.add.pattern.exists.title=Add Wildcard
-filetype.settings.component=File types
-filetype.settings.no.patterns=No registered file patterns
-filetype.recognized.group=Recognized File Types
-filetype.chooser.file.pattern=File &pattern:
+filetype.plaintext.description=\u6587\u672c
+filetype.chooser.title=\u6ce8\u518c\u5173\u8054\u65b0\u6587\u4ef6\u7c7b\u578b
+filetype.chooser.prompt=\u6587\u4ef6 ''{0}'' \u6ca1\u6709\u5173\u8054\u81f3\u4efb\u4f55\u6587\u4ef6\u7c7b\u578b\u3002\u8bf7\u5b9a\u4e49\u5173\u8054\uff1a
+filetype.chooser.association=\u5728 {0} \u6253\u5f00\u5339\u914d\u7684\u6587\u4ef6:
+filetype.registered.patterns.group=\u6ce8\u518c\u6a21\u5f0f
+filetype.settings.title=\u6587\u4ef6\u7c7b\u578b
+filetype.edit.existing.title=\u7f16\u8f91\u6587\u4ef6\u7c7b\u578b
+filetype.edit.new.title=\u65b0\u6587\u4ef6\u7c7b\u578b
+filetype.edit.add.pattern.prompt=\u8f93\u5165\u65b0\u901a\u914d\u7b26 (\u5141\u8bb8 '*' \u548c '?'):
+filetype.edit.add.pattern.title=\u6dfb\u52a0\u901a\u914d\u7b26
+filetype.edit.edit.pattern.title=\u7f16\u8f91\u901a\u914d\u7b26
+filetype.edit.add.pattern.exists.error=\u8fd9\u4e2a\u901a\u914d\u7b26\u662f\u4fdd\u7559\u6587\u4ef6\u7c7b\u578b ''{0}'' \uff0c\u4e0d\u80fd\u91cd\u65b0\u5206\u914d
+filetype.edit.add.pattern.exists.message=\u8fd9\u4e2a\u901a\u914d\u7b26\u5df2\u88ab\u6587\u4ef6\u7c7b\u578b ''{0}'' \u6ce8\u518c
+filetype.edit.add.pattern.reassign.button=\u91cd\u65b0\u5206\u914d\u901a\u914d\u7b26(&R)
+filetype.edit.add.pattern.exists.title=\u6dfb\u52a0\u901a\u914d\u7b26
+filetype.settings.component=\u6587\u4ef6\u7c7b\u578b
+filetype.settings.no.patterns=\u6ca1\u6709\u5df2\u6ce8\u518c\u7684\u6587\u4ef6\u6a21\u5f0f
+filetype.recognized.group=\u8bc6\u522b\u6587\u4ef6\u7c7b\u578b
+filetype.chooser.file.pattern=\u6587\u4ef6\u6a21\u5f0f(&p)\uff1a
