--- a/resources_cn/messages/LicenseCommonBundle.properties
+++ b/resources_cn/messages/LicenseCommonBundle.properties
@@ -1,6 +1,6 @@
-license.agreement.title=License Agreement
-license.agreement.title.for=License Agreement for {0}
-button.ok=OK
-button.cancel=Cancel
-license.agreement.prompt=<html><body>Please read the following license agreement carefully.<br>To proceed you must agree to all terms of this license by selecting the checkbox.</html></body>
-license.agreement.accept.checkbox=Accept all terms of the license
+license.agreement.title=\u8bb8\u53ef\u534f\u8bae
+license.agreement.title.for={0} \u7684\u8bb8\u53ef\u534f\u8bae
+button.ok=\u540c\u610f
+button.cancel=\u4e0d\u540c\u610f
+license.agreement.prompt=<html><body>\u8bf7\u4ed4\u7ec6\u9605\u8bfb\u4e0b\u9762\u7684\u8bb8\u53ef\u534f\u8bae\u3002<br>\u5982\u679c\u7ee7\u7eed\uff0c\u60a8\u5fc5\u987b\u901a\u8fc7\u9009\u62e9\u590d\u9009\u6846\u6765\u540c\u610f\u6240\u6709\u8bb8\u53ef\u534f\u8bae\u3002</html></body>
+license.agreement.accept.checkbox=\u63a5\u53d7\u8be5\u8bb8\u53ef\u534f\u8bae\u7684\u6240\u6709\u6761\u6b3e
