--- a/resources_cn/messages/XDebuggerBundle.properties
+++ b/resources_cn/messages/XDebuggerBundle.properties
@@ -1,143 +1,143 @@
-xdebugger.colors.page.name=Debugger
+xdebugger.colors.page.name=\u8c03\u8bd5\u5668
 
-debugger.configurable.display.name=Debugger
-debugger.dataViews.display.name=Data Views
-debugger.stepping.display.name=Stepping
+debugger.configurable.display.name=\u8c03\u8bd5\u5668
+debugger.dataViews.display.name=\u6570\u636e\u89c6\u56fe
+debugger.stepping.display.name=\u6b65\u8fdb
 # suppress inspection "UnusedProperty"
-debugger.hotswap.display.name=HotSwap
+debugger.hotswap.display.name=\u70ed\u90e8\u7f72
 
-xdebugger.default.content.title=Debug
-xdebugger.debugger.tab.title=Debugger
-xdebugger.attach.popup.title=Attach with {0} To
-xdebugger.attach.host.popup.title=View {0} processes
-xdebugger.attach.toLocal.popup.selectDebugger.title=Debugger
-xdebugger.attach.toLocal.popup.recent=Recent
-xdebugger.attach.toLocal.action=Attach to Local Process...
-xdebugger.attach.toLocal.action.description=Attach to a locally running process with an available debugger
-xdebugger.attach.toLocal.action.collectingProcesses=Collecting Processes...
-xdebugger.attach.popup.emptyText=No processes to attach to
-xdebugger.attach.popup.title.default=Attach To
-xdebugger.attach.toRemote.popup.title=Show {0} processes
-xdebugger.attach.popup.selectDebugger.title=Debugger
-xdebugger.attach.popup.recent=Recent
-xdebugger.attach.action=Attach to Process...
-xdebugger.attach.action.description=Attach to process with an available debugger
-xdebugger.attach.action.collectingItems=Collecting Attach Items...
+xdebugger.default.content.title=\u8c03\u8bd5
+xdebugger.debugger.tab.title=\u8c03\u8bd5\u5668
+xdebugger.attach.popup.title=\u9644\u52a0 {0} \u5230
+xdebugger.attach.host.popup.title=\u6d4f\u89c8 {0} \u8fdb\u7a0b
+xdebugger.attach.toLocal.popup.selectDebugger.title=\u8c03\u8bd5\u5668
+xdebugger.attach.toLocal.popup.recent=\u6700\u8fd1
+xdebugger.attach.toLocal.action=\u9644\u52a0\u5230\u672c\u5730\u8fdb\u7a0b...
+xdebugger.attach.toLocal.action.description=\u9644\u52a0\u5230\u4e00\u4e2a\u5728\u672c\u5730\u8fd0\u884c\u7684\u8fdb\u7a0b\u548c\u4e00\u4e2a\u53ef\u7528\u7684\u8c03\u8bd5\u5668
+xdebugger.attach.toLocal.action.collectingProcesses=\u6b63\u5728\u6536\u96c6\u8fdb\u7a0b...
+xdebugger.attach.popup.emptyText=\u6ca1\u6709\u8981\u9644\u52a0\u7684\u8fdb\u7a0b
+xdebugger.attach.popup.title.default=\u9644\u52a0\u5230
+xdebugger.attach.toRemote.popup.title=\u663e\u793a {0} \u8fdb\u7a0b
+xdebugger.attach.popup.selectDebugger.title=\u8c03\u8bd5\u5668
+xdebugger.attach.popup.recent=\u6700\u8fd1
+xdebugger.attach.action=\u9644\u52a0\u5230\u8fdb\u7a0b...
+xdebugger.attach.action.description=\u4f7f\u7528\u53ef\u7528\u7684\u8c03\u8bd5\u5668\u9644\u52a0\u5230\u8fdb\u7a0b
+xdebugger.attach.action.collectingItems=\u6b63\u5728\u6536\u96c6\u9644\u52a0\u9879\u76ee...
 
-xdebugger.attach.action.items.error.title=Failed to get processes
-xdebugger.attach.action.items.error.message=Failed to get list of processes running on the host
+xdebugger.attach.action.items.error.title=\u65e0\u6cd5\u83b7\u5f97\u8fdb\u7a0b
+xdebugger.attach.action.items.error.message=\u65e0\u6cd5\u83b7\u53d6\u4e3b\u673a\u4e0a\u8fd0\u884c\u7684\u8fdb\u7a0b\u5217\u8868
 
-xdebugger.remove.line.breakpoint.action.text=Remove breakpoint
-xdebugger.disable.breakpoint.action.text=Disable breakpoint
-xdebugger.enable.breakpoint.action.text=Enable breakpoint
-xdebugger.view.breakpoint.properties.action=Properties
-xdebugger.view.breakpoint.reveal.action=Show Breakpoints Dialog
-xdebugger.view.breakpoint.edit.action=Edit
+xdebugger.remove.line.breakpoint.action.text=\u79fb\u9664\u65ad\u70b9
+xdebugger.disable.breakpoint.action.text=\u7981\u7528\u65ad\u70b9
+xdebugger.enable.breakpoint.action.text=\u542f\u7528\u65ad\u70b9
+xdebugger.view.breakpoint.properties.action=\u5c5e\u6027
+xdebugger.view.breakpoint.reveal.action=\u663e\u793a\u65ad\u70b9\u5bf9\u8bdd\u6846
+xdebugger.view.breakpoint.edit.action=\u7f16\u8f91
 
-xbreakpoint.tooltip.suspend.policy.all=Suspend: all
-xbreakpoint.tooltip.suspend.policy.thread=Suspend: thread
-xbreakpoint.tooltip.suspend.policy.none=Suspend: none
-xbreakpoint.tooltip.condition=Condition:
-xbreakpoint.tooltip.log.message=Log message: yes
-xbreakpoint.tooltip.log.stack=Log stack: yes
-xbreakpoint.tooltip.log.expression=Log expression:
-xbreakpoint.tooltip.depends.on=Depends on:
+xbreakpoint.tooltip.suspend.policy.all=\u6682\u505c: \u5168\u90e8
+xbreakpoint.tooltip.suspend.policy.thread=\u6682\u505c: \u7ebf\u7a0b
+xbreakpoint.tooltip.suspend.policy.none=\u6682\u505c: \u65e0
+xbreakpoint.tooltip.condition=\u6761\u4ef6:
+xbreakpoint.tooltip.log.message=\u6d88\u606f\u65e5\u5fd7: \u662f
+xbreakpoint.tooltip.log.stack=\u5806\u6808\u65e5\u5fd7: \u662f
+xbreakpoint.tooltip.log.expression=\u8868\u8fbe\u5f0f\u65e5\u5fd7:
+xbreakpoint.tooltip.depends.on=\u4f9d\u8d56\u4e8e:
 
-xbreakpoints.dialog.title=Breakpoints
-xbreakpoints.dialog.button.goto=&Go to
-xbreakpoints.dialog.button.view.source=&View Source
-xbreakpoints.dialog.button.remove=&Remove
-xbreakpoints.dialog.button.add=&Add...
-xbreakpoints.conditions.group.title=Conditions
+xbreakpoints.dialog.title=\u65ad\u70b9\u7ba1\u7406
+xbreakpoints.dialog.button.goto=\u8f6c\u5230(&G)
+xbreakpoints.dialog.button.view.source=\u67e5\u770b\u6e90\u4ee3\u7801(&V)
+xbreakpoints.dialog.button.remove=\u79fb\u9664(&R)
+xbreakpoints.dialog.button.add=\u6dfb\u52a0(&A)...
+xbreakpoints.conditions.group.title=\u6761\u4ef6
 
-suspend.policy.panel.title=Suspend policy
-suspend.policy.panel.suspend=&Suspend:
-suspend.policy.panel.all=&All
-suspend.policy.panel.thread=&Thread
-suspend.policy.panel.makeDefault=Make De&fault
+suspend.policy.panel.title=\u6682\u505c\u7b56\u7565
+suspend.policy.panel.suspend=\u6682\u505c(&S)
+suspend.policy.panel.all=\u5168\u90e8(&A)
+suspend.policy.panel.thread=\u7ebf\u7a0b(&T)
+suspend.policy.panel.makeDefault=\u8bbe\u4e3a\u9ed8\u8ba4\u503c(&F)
 
-xbreakpoints.properties.actions.group.title=Actions
-xbreakpoints.log.message.label=Log:
-xbreakpoints.log.message.checkbox="Breakpoint hit" &message
-xbreakpoints.log.stack.checkbox=Stac&k trace
-xbreakpoints.log.expression.checkbox=&Evaluate and log:
-xbreakpoints.condition.checkbox=&Condition:
-xbreakpoints.enabled.label=Enable&d
-xbreakpoints.restore.label=Restore previous breakpoint
-xbreakpoint.group.depends.on=Depends on
-xbreakpoint.label.after.breakpoint.was.hit=After hit:
-xbreakpoint.radio.disable.again=Disable again
-xbreakpoint.radio.leave.enabled=Leave enabled
-xbreakpoint.master.breakpoint.none=<None>
-xbreakpoint.master.breakpoint.description=Disable until breakpoint is hit:
-rule.name.group.by.file=Group by file
+xbreakpoints.properties.actions.group.title=\u52a8\u4f5c
+xbreakpoints.log.message.label=\u65e5\u5fd7:
+xbreakpoints.log.message.checkbox="\u65ad\u70b9\u51fb\u4e2d"\u4fe1\u606f(&M)
+xbreakpoints.log.stack.checkbox=\u5806\u6808\u8ddf\u8e2a(&K)
+xbreakpoints.log.expression.checkbox=\u65e5\u5fd7\u8bc4\u4f30\u8868\u8fbe\u5f0f(&E):
+xbreakpoints.condition.checkbox=\u6761\u4ef6(&C):
+xbreakpoints.enabled.label=\u542f\u7528(&D)
+xbreakpoints.restore.label=\u6062\u590d\u4e0a\u4e00\u4e2a\u65ad\u70b9
+xbreakpoint.group.depends.on=\u4f9d\u8d56\u4e8e
+xbreakpoint.label.after.breakpoint.was.hit=\u65ad\u70b9\u51fb\u4e2d\u540e:
+xbreakpoint.radio.disable.again=\u518d\u6b21\u7981\u7528
+xbreakpoint.radio.leave.enabled=\u542f\u7528\u5e76\u79bb\u5f00
+xbreakpoint.master.breakpoint.none=<\u65e0>
+xbreakpoint.master.breakpoint.description=\u7981\u7528\uff0c\u76f4\u5230\u9009\u5b9a\u7684\u65ad\u70b9\u88ab\u51fb\u4e2d:
+rule.name.group.by.file=\u6309\u6587\u4ef6\u5206\u7ec4
 xbreakpoint.default.display.text={1}:{0,number,#}
-xbreakpoint.label.empty=Select a breakpoint
+xbreakpoint.label.empty=\u9009\u62e9\u4e00\u4e2a\u65ad\u70b9
 
-xbreakpoint.reached.text=Breakpoint reached:
+xbreakpoint.reached.text=\u5230\u8fbe\u65ad\u70b9:
 
-xdebugger.evaluate.language.hint=Click to change the language
-xdebugger.evaluate.history.hint=Show history
-xdebugger.evaluate.history.navigate.ad=Press {0} to navigate through the history
-xdebugger.evaluate.label.result=&Result:
-xdebugger.button.evaluate=E&valuate
-xdebugger.evaluate.dialog.title=Evaluate
-xdebugger.evaluate.dialog.close=Close
-xdebugger.mark.dialog.duplicate.warning=Label is already in use and will be replaced
-xdebugger.dialog.title.evaluate.expression=Evaluate Expression
-xdebugger.evaluate.label.expression=Expression:
-xdebugger.evaluate.addtowatches.hint=Use {0} to add to Watches
-dialog.title.evaluate.code.fragment=Evaluate Code Fragment
-button.text.code.fragment.mode=Code Fragment &Mode
-button.text.expression.mode=Expression &Mode
-xdebugger.label.text.code.fragment=Code fragment:
-xdebugger.evaluate.result=result
-xdebugger.evaluate.stack.frame.has.not.evaluator=Cannot evaluate, current stack frame doesn't support evaluation
+xdebugger.evaluate.language.hint=\u70b9\u51fb\u66f4\u6539\u8bed\u8a00
+xdebugger.evaluate.history.hint=\u663e\u793a\u5386\u53f2
+xdebugger.evaluate.history.navigate.ad=\u6309 {0} \u6765\u6d4f\u89c8\u5386\u53f2
+xdebugger.evaluate.label.result=\u7ed3\u679c(&R):
+xdebugger.button.evaluate=\u4f30\u503c(&V)
+xdebugger.evaluate.dialog.title=\u4f30\u503c
+xdebugger.evaluate.dialog.close=\u5173\u95ed
+xdebugger.mark.dialog.duplicate.warning=\u6807\u7b7e\u5df2\u88ab\u4f7f\u7528\uff0c\u5c06\u88ab\u66ff\u6362
+xdebugger.dialog.title.evaluate.expression=\u8ba1\u7b97\u8868\u8fbe\u5f0f
+xdebugger.evaluate.label.expression=\u8868\u8fbe\u5f0f:
+xdebugger.evaluate.addtowatches.hint=\u4f7f\u7528 {0} \u6765\u6dfb\u52a0\u5230\u76d1\u89c6\u533a
+dialog.title.evaluate.code.fragment=\u4ee3\u7801\u7247\u6bb5\u4f30\u503c
+button.text.code.fragment.mode=\u4ee3\u7801\u6bb5\u6a21\u5f0f(&M)
+button.text.expression.mode=\u8868\u8fbe\u5f0f\u6a21\u5f0f(&M)
+xdebugger.label.text.code.fragment=\u4ee3\u7801\u6bb5:
+xdebugger.evaluate.result=\u7ed3\u679c
+xdebugger.evaluate.stack.frame.has.not.evaluator=\u65e0\u6cd5\u4f30\u503c\uff0c\u5f53\u524d\u5806\u6808\u5e27\u4e0d\u652f\u6301\u4f30\u503c
 
-xdebugger.popup.value.tree.set.root.action.tooltip=Set As Root
+xdebugger.popup.value.tree.set.root.action.tooltip=\u8bbe\u7f6e\u4e3a\u6839
 
 # suppress inspection "TrailingSpacesInProperty"
-xdebugger.shortcuts.text.delimiter=\u0020or\u0020
+xdebugger.shortcuts.text.delimiter= \u6216 
 
-xdebugger.building.tree.node.message=Collecting data\u2026
-xdebugger.modifiyng.value.node.message=Modifying value\u2026
-xdebugger.evaluating.expression.node.message=Evaluating\u2026
-node.text.ellipsis.0.more.nodes.double.click.to.show=\u2026 ({0} more {0, choice, 1#item|2#items}. Double-click to see)
-node.text.ellipsis.0.unknown.more.nodes.double.click.to.show=\u2026 (Double-click to see more items)
-node.text.ellipsis.truncated=\u2026 (length: {0})
-node.test.show.full.value=\u2026 View
-inspect.value.dialog.title=Inspect ''{0}''
+xdebugger.building.tree.node.message=\u6b63\u5728\u6536\u96c6\u6570\u636e\u2026
+xdebugger.modifiyng.value.node.message=\u6b63\u5728\u4fee\u6539\u503c\u2026
+xdebugger.evaluating.expression.node.message=\u6b63\u5728\u4f30\u503c\u2026
+node.text.ellipsis.0.more.nodes.double.click.to.show=\u2026 ({0} \u66f4\u591a {0, choice, 1#\u9879|2#\u9879}. \u53cc\u51fb\u67e5\u770b)
+node.text.ellipsis.0.unknown.more.nodes.double.click.to.show=\u2026 (\u53cc\u51fb\u67e5\u770b\u66f4\u591a\u9879\u76ee)
+node.text.ellipsis.truncated=\u2026 (\u957f\u5ea6: {0})
+node.test.show.full.value=\u2026 \u67e5\u770b\u5168\u90e8
+inspect.value.dialog.title=\u68c0\u67e5 ''{0}''
 
-debugger.state.message.connected=Connected
-debugger.state.message.connecting=Connecting
-debugger.state.message.disconnected=Disconnected
+debugger.state.message.connected=\u5df2\u8fde\u63a5
+debugger.state.message.connecting=\u6b63\u5728\u8fde\u63a5
+debugger.state.message.disconnected=\u65ad\u5f00\u8fde\u63a5
 
-debugger.runner.start.action.text=&Debug
-string.debugger.runner.description=Debug selected configuration
+debugger.runner.start.action.text=\u8c03\u8bd5(&D)
+string.debugger.runner.description=\u8c03\u8bd5\u9009\u62e9\u7684\u914d\u7f6e
 
 # ToolWindow
-debugger.session.tab.threads.title=Threads
-debugger.session.tab.frames.title=Frames
-debugger.session.tab.watches.title=Watches
-debugger.session.tab.variables.title=Variables
-debugger.session.tab.log.content.name=Log: {0}
-debugger.session.tab.console.content.name=Console
-debugger.session.tab.watches.title.with.size=Watches ({0})
-action.next.frame.text=Next Frame
-action.previous.frame.text=Previous Frame
-stack.frame.loading.text=Loading\u2026
-invalid.frame=<invalid frame>
-xdebugger.drag.text.0.elements={0} elements
-xdebugger.drop.text.add.to.watches=Add to watches
+debugger.session.tab.threads.title=\u7ebf\u7a0b
+debugger.session.tab.frames.title=\u5e27
+debugger.session.tab.watches.title=\u76d1\u89c6
+debugger.session.tab.variables.title=\u53d8\u91cf
+debugger.session.tab.log.content.name=\u65e5\u5fd7: {0}
+debugger.session.tab.console.content.name=\u63a7\u5236\u53f0
+debugger.session.tab.watches.title.with.size=\u76d1\u89c6 ({0})
+action.next.frame.text=\u4e0b\u4e00\u5e27
+action.previous.frame.text=\u4e0a\u4e00\u5e27
+stack.frame.loading.text=\u6b63\u5728\u52a0\u8f7d\u2026
+invalid.frame=<\u65e0\u6548\u7684\u5e27>
+xdebugger.drag.text.0.elements={0} \u5143\u7d20
+xdebugger.drop.text.add.to.watches=\u6dfb\u52a0\u5230\u76d1\u89c6\u533a
 
-debugger.frames.not.available=Frames are not available
-debugger.threads.not.available=Threads are not available
-debugger.variables.not.available=Variables are not available
-debugger.no.watches=No watches
-debugger.no.breakpoints=No breakpoints
-debugger.no.results=Type an expression and press 'Enter'
-load.value.task.error=Cannot load value\: {0}
-load.value.task.text=Loading value
+debugger.frames.not.available=\u5e27\u662f\u4e0d\u53ef\u7528\u7684
+debugger.threads.not.available=\u7ebf\u7a0b\u662f\u4e0d\u53ef\u7528\u7684
+debugger.variables.not.available=\u53d8\u91cf\u662f\u4e0d\u53ef\u7528\u7684
+debugger.no.watches=\u6ca1\u6709\u76d1\u89c6\u5bf9\u8c61
+debugger.no.breakpoints=\u6ca1\u6709\u65ad\u70b9
+debugger.no.results=\u8f93\u5165\u4e00\u4e2a\u8868\u8fbe\u5f0f\u5e76\u6309\u4e0b 'Enter'
+load.value.task.error=\u65e0\u6cd5\u52a0\u8f7d\u503c\: {0}
+load.value.task.text=\u6b63\u5728\u52a0\u8f7d\u503c
 
 scope.global = Global
 scope.local = Local
@@ -151,29 +151,29 @@ scope.block = Block
 scope.script = Script
 scope.unknown = Unknown
 
-setting.value.tooltip.delay.label=&Value tooltip delay (ms):
-setting.enable.auto.expressions.label=Enable auto expressions in Variables view
-setting.sort.alphabetically.label=Sort values a&lphabetically
+setting.value.tooltip.delay.label=\u63d0\u793a\u503c\u663e\u793a\u5ef6\u8fdf(&V)(ms):
+setting.enable.auto.expressions.label=\u5728\u53d8\u91cf\u89c6\u56fe\u542f\u7528\u81ea\u52a8\u8868\u8fbe\u5f0f
+setting.sort.alphabetically.label=\u6309\u5b57\u6bcd\u987a\u5e8f\u6392\u5e8f(&L)
 
-setting.hide.window.label=Hide debug &window on process termination
-setting.focus.app.on.breakpoint.label=Focus application on breakpoint
-settings.show.window.label=Show &debug window on breakpoint
+setting.hide.window.label=\u8fdb\u7a0b\u7ec8\u6b62\u65f6\u9690\u85cf\u8c03\u8bd5\u7a97\u53e3(&W)
+setting.focus.app.on.breakpoint.label=\u5f3a\u5236\u5e94\u7528\u5230\u65ad\u70b9
+settings.show.window.label=\u663e\u793a\u65ad\u70b9\u8c03\u8bd5\u7a97\u53e3(&d)
 
-showReferring.dialog.title=Referring Objects For {0}
-settings.show.values.inline=Show values inline
-settings.show.value.tooltip=Show value tooltip.
-settings.show.tooltip.on.selection=Show value tooltip on code selection
-settings.scroll.to.center=Scroll execution point to center
-settings.enable.memory.view=Enable Memory View
-settings.tooltip.label=If disabled, use "{0}" to show/hide tooltips
+showReferring.dialog.title=\u6240\u6307\u7684\u5bf9\u8c61 {0}
+settings.show.values.inline=\u5f53\u524d\u884c\u663e\u793a\u53d8\u91cf\u503c
+settings.show.value.tooltip=\u663e\u793a\u63d0\u793a\u503c.
+settings.show.tooltip.on.selection=\u5728\u9009\u62e9\u4ee3\u7801\u4e0a\u663e\u793a\u63d0\u793a\u7684\u503c
+settings.scroll.to.center=\u6eda\u52a8\u6267\u884c\u70b9\u5230\u4e2d\u5fc3
+settings.enable.memory.view=\u542f\u7528\u5185\u5b58\u89c6\u56fe
+settings.tooltip.label=\u5982\u679c\u7981\u7528, \u4f7f\u7528 "{0}" \u6765\u663e\u793a/\u9690\u85cf\u63d0\u793a\u5de5\u5177
 
-ad.extra.selection.shortcut=You can also choose an item with {0}
-settings.drag.to.remove.breakpoint=Remove breakpoint:
-settings.drag.to.remove.breakpoint.click=Click with left mouse button
-settings.drag.to.remove.breakpoint.drag=Drag to the editor or click with middle mouse button
-settings.confirm.breakpoint.removal=Confirm removal of conditional or logging breakpoints
+ad.extra.selection.shortcut=\u4f60\u4e5f\u53ef\u4ee5\u9009\u62e9\u4e00\u4e2a\u9879\u76ee {0}
+settings.drag.to.remove.breakpoint=\u79fb\u9664\u65ad\u70b9:
+settings.drag.to.remove.breakpoint.click=\u5355\u51fb\u9f20\u6807\u5de6\u952e
+settings.drag.to.remove.breakpoint.drag=\u62d6\u52a8\u5230\u7f16\u8f91\u5668\u6216\u5355\u51fb\u9f20\u6807\u4e2d\u952e
+settings.confirm.breakpoint.removal=\u786e\u8ba4\u5220\u9664\u6761\u4ef6\u6216\u8bb0\u5f55\u7684\u65ad\u70b9
 
-message.confirm.breakpoint.removal.title=Confirm Removal
-message.confirm.breakpoint.removal.message=<html>Breakpoint contains
-message.confirm.breakpoint.removal.message.condition=<br>condition:<br><pre>{0}</pre>
-message.confirm.breakpoint.removal.message.log=<br>log expression:<br><pre>{0}</pre>
+message.confirm.breakpoint.removal.title=\u786e\u8ba4\u5220\u9664
+message.confirm.breakpoint.removal.message=<html>\u65ad\u70b9\u5305\u542b
+message.confirm.breakpoint.removal.message.condition=<br>\u6761\u4ef6:<br><pre>{0}</pre>
+message.confirm.breakpoint.removal.message.log=<br>\u65e5\u5fd7\u8868\u8fbe\u5f0f:<br><pre>{0}</pre>
